[gd_scene load_steps=3 format=2]

[ext_resource path="res://fonts/prompt_theme.tres" type="Theme" id=1]
[ext_resource path="res://scenes/ui/GameSaveSlot.gd" type="Script" id=2]

[node name="GameSaveSlot" type="Button"]
margin_right = 120.0
margin_bottom = 22.0
size_flags_vertical = 3
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="NewGameLabel" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
text = "New Game"
align = 1
valign = 1

[node name="SaveData" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_right = -1.0
mouse_filter = 2

[node name="WorldLabel" type="Label" parent="SaveData"]
anchor_right = 0.4
anchor_bottom = 0.5
text = "World 1"
valign = 1

[node name="LastPlayedLabel" type="Label" parent="SaveData"]
anchor_left = 0.4
anchor_right = 1.0
anchor_bottom = 0.5
text = "00/00/00 00:00:00"
align = 2
valign = 2

[node name="TimePlayedLabel" type="Label" parent="SaveData"]
anchor_left = 0.4
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
text = "00:00:00"
align = 2
valign = 1

[node name="DeathsLabel" type="Label" parent="SaveData"]
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
text = "Deaths: ##"
valign = 1
